; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.

(library
 (name Debuggerlib)
 (public_name infer.Debuggerlib)
 (flags
  (:standard -open Core -open IR -open IStdlib -open IStd
    -open IBase -open Absint))
 (libraries core IStdlib IBase IR Absint)
 (preprocess
  (pps ppx_yojson_conv ppx_compare ppx_variants_conv)))
