; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.

(library
 (name ToyCheckerlib)
 (public_name infer.ToyCheckerlib)
 (flags
  (:standard -open Core -open IR -open IStdlib -open IStd -open ATDGenerated
    -open IBase -open Absint -open BO -open TOPLlib -open Nullsafe))
 (libraries core IStdlib ATDGenerated IBase IR Absint BO TOPLlib Nullsafe)
 (preprocess
  (pps ppx_yojson_conv ppx_compare ppx_variants_conv)))
